# open-library-search-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  open-library-search.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  open-library-search.rockspec  open-library-search_sdk.lua  open-library-search_types.lua
php/: AGENTS.md  CLAUDE.md  README.md  (+5 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  openlibrarysearch_sdk.py  openlibrarysearch_types.py  pyproject.toml
py/core/: context.py  control.py  error.py  helpers.py  spec.py  utility_type.py
py/entity/: author_entity.py  search_entity.py
py/feature/: base_feature.py  log_feature.py  paging_feature.py  retry_feature.py  telemetry_feature.py  test_feature.py  timeout_feature.py
py/test/: runner.py  test_author_direct.py  test_author_entity.py  test_exists.py  test_feature.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_search_direct.py  test_search_entity.py
py/utility/: clean.py  done.py  feature_add.py  make_context.py  make_error.py  make_request.py  make_response.py  make_result.py  make_spec.py  make_url.py  prepare_body.py  prepare_method.py  prepare_params.py  prepare_path.py  register.py  result_body.py  transform_request.py
(+429 files in other folders)
